<resources>
    <string name="app_name">EffectiveMobile</string>
    <string name="login_button">Вход в личный кабинет</string>
    <string name="search_job_button">Поиск работы</string>
    <string name="continue_button">Продолжить</string>
    <string name="password_login_button">Войти с паролем</string>
    <string name="search_employees_button">Поиск сотрудников</string>
    <string name="post_vacancies_button">Размещение вакансий и доступ к базе резюме</string>
    <string name="hiring_employees_button">Я ищу сотрудников</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_search">Поиск</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_responses">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>

    <string name="vacancy_title">UI/UX Designer</string>
    <string name="location">Минск</string>
    <string name="company_name">Мобирикс</string>
    <string name="experience_required">Опыт от 1 года до 3 лет</string>
    <string name="posted_date">Опубликовано 20 февраля</string>
    <string name="views_count">Сейчас просматривает 1 человек</string>

    <plurals name="count_vacancy">
        <item quantity="one">Ещё %1$d вакансия</item>
        <item quantity="two">Ещё %1$d вакансии</item>
        <item quantity="few">Ещё %1$d вакансии</item>
        <item quantity="many">Ещё %1$d вакансий</item>
        <item quantity="other">Ещё %1$d вакансий</item>
    </plurals>
    <plurals name="count_looking">
        <item quantity="zero">Сейчас просматривает %1$d человек</item>
        <item quantity="one">Сейчас просматривает %1$d человек</item>
        <item quantity="two">Сейчас просматривают %1$d человека</item>
        <item quantity="few">Сейчас просматривают %1$d человека</item>
        <item quantity="many">Сейчас просматривают %1$d человек</item>
        <item quantity="other">Сейчас просматривают %1$d человек</item>
    </plurals>
    <string name="title_activity_main_activityu">MainActivityu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>