<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="296dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_favorites"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"

                app:layout_constraintBottom_toBottomOf="@+id/views_count_looking"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/views_count_looking" />

            <TextView
                android:id="@+id/views_count_looking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@plurals/count_looking"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vacancy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/vacancy_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/views_count_looking"
                app:layout_constraintTop_toBottomOf="@+id/views_count_looking" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/vacancy_title"
                app:layout_constraintTop_toBottomOf="@+id/vacancy_title" />

            <ImageView
                android:id="@+id/icon_verification"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/verification"
                app:layout_constraintBottom_toBottomOf="@+id/company_name"
                app:layout_constraintStart_toEndOf="@+id/company_name"
                app:layout_constraintTop_toTopOf="@+id/company_name" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/company_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/work"

                app:layout_constraintBottom_toBottomOf="@+id/experience_required"
                app:layout_constraintStart_toStartOf="@+id/company_name"
                app:layout_constraintTop_toTopOf="@+id/experience_required" />

            <TextView
                android:id="@+id/experience_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/experience_required"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/posted_date"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/company_name" />

            <TextView
                android:id="@+id/posted_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/posted_date"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/experience_required" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/green"
                android:text="Откликнуться"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posted_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>